dynamix/force-app/main/default/objects/Booking__c/fields/Flat_No_Non_Critical__c.field-meta.xml
<CustomField>
    <fullName>Flat_No_Non_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flat No (Non-Critical)</label>
    <type>Checkbox</type>
</CustomField>