dynamix/force-app/main/default/objects/Booking__c/fields/Flat_Type_Non_Critical__c.field-meta.xml
<CustomField>
    <fullName>Flat_Type_Non_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flat Type(Non-Critical)</label>
    <type>Checkbox</type>
</CustomField>