dynamix/force-app/main/default/objects/Booking__c/fields/Floor_No__c.field-meta.xml
<CustomField>
    <fullName>Floor_No__c</fullName>
    <formula>Text(Related_Suggested_Property__r.Unit__r.Floor__c)</formula>
    <label>Floor No.</label>
    <type>Text</type>
</CustomField>