dynamix/force-app/main/default/objects/Booking__c/fields/Floor_Non_Critical__c.field-meta.xml
<CustomField>
    <fullName>Floor_Non_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Floor(Non-Critical)</label>
    <type>Checkbox</type>
</CustomField>