dynamix/force-app/main/default/objects/Booking__c/fields/Forfeiture__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture__c</fullName>
    <label>Forfeiture %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>