dynamix/force-app/main/default/objects/Booking__c/fields/Forfeiture_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Amount__c</fullName>
    <label>Forfeiture Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>