dynamix/force-app/main/default/objects/Booking__c/fields/Forfeiture_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Criteria__c</fullName>
    <label>Forfeiture Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Value</fullName>
            </value>
            <value>
                <fullName>Received Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>