dynamix/force-app/main/default/objects/Booking__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST</label>
    <summarizedField>Price_Details__c.GST_Calculated__c</summarizedField>
    <summaryFilterItems>
        <field>Price_Details__c.Charge_Group__c</field>
        <operation>contains</operation>
        <value>Agreement</value>
    </summaryFilterItems>
    <summaryForeignKey>Price_Details__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>