dynamix/force-app/main/default/objects/Booking__c/fields/GST_Non_Critical__c.field-meta.xml
<CustomField>
    <fullName>GST_Non_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST (Non-Critical)</label>
    <type>Checkbox</type>
</CustomField>