dynamix/force-app/main/default/objects/Booking__c/fields/GST_of_Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>GST_of_Other_Charges__c</fullName>
    <label>GST of Other Charges</label>
    <summarizedField>Price_Details__c.GST_Calculated__c</summarizedField>
    <summaryFilterItems>
        <field>Price_Details__c.Charge_Group__c</field>
        <operation>equals</operation>
        <value>Others</value>
    </summaryFilterItems>
    <summaryForeignKey>Price_Details__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>