dynamix/force-app/main/default/objects/Booking__c/fields/GST_Pending__c.field-meta.xml
<CustomField>
    <fullName>GST_Pending__c</fullName>
    <formula>GST__c - Payment_Received_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST (Pending)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>