dynamix/force-app/main/default/objects/Booking__c/fields/Handover_Completion_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Handover_Completion_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handover Completion Checkbox</label>
    <type>Checkbox</type>
</CustomField>