dynamix/force-app/main/default/objects/Booking__c/fields/Handover_of_any_other_marketing_vouchers__c.field-meta.xml
<CustomField>
    <fullName>Handover_of_any_other_marketing_vouchers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handover of any other marketing vouchers</label>
    <type>Checkbox</type>
</CustomField>