dynamix/force-app/main/default/objects/Booking__c/fields/Handover_of_Car_Park_Allotment_Letter__c.field-meta.xml
<CustomField>
    <fullName>Handover_of_Car_Park_Allotment_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handover of Car Park Allotment Letter</label>
    <type>Checkbox</type>
</CustomField>