dynamix/force-app/main/default/objects/Booking__c/fields/Handover_of_NDC__c.field-meta.xml
<CustomField>
    <fullName>Handover_of_NDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handover of NDC</label>
    <type>Checkbox</type>
</CustomField>