dynamix/force-app/main/default/objects/Booking__c/fields/Handover_of_Possession_Letter__c.field-meta.xml
<CustomField>
    <fullName>Handover_of_Possession_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handover of Possession Letter</label>
    <type>Checkbox</type>
</CustomField>