dynamix/force-app/main/default/objects/Booking__c/fields/Indemnity_Form__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indemnity Form</label>
    <type>Checkbox</type>
</CustomField>