dynamix/force-app/main/default/objects/Booking__c/fields/Index_II_Document__c.field-meta.xml
<CustomField>
    <fullName>Index_II_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Index II Document</label>
    <type>Checkbox</type>
</CustomField>