dynamix/force-app/main/default/objects/Booking__c/fields/Interest_Accrued_on_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Interest_Accrued_on_Amount_Due__c</fullName>
    <label>Interest Accrued on Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>