dynamix/force-app/main/default/objects/Booking__c/fields/Interest_Pending__c.field-meta.xml
<CustomField>
    <fullName>Interest_Pending__c</fullName>
    <formula>Total_interest_amount__c -  Total_Interest_Received__c  -  Hidden_Interest_Wave_Off_Amount__c - Milestones_Wise_Interest_WaveOff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>