dynamix/force-app/main/default/objects/Booking__c/fields/Interest_Wafe_Off_Approved__c.field-meta.xml
<CustomField>
    <fullName>Interest_Wafe_Off_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Wafe Off Approved</label>
    <type>Checkbox</type>
</CustomField>