dynamix/force-app/main/default/objects/Booking__c/fields/Intrument_Name__c.field-meta.xml
<CustomField>
    <fullName>Intrument_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instrument Name(Non-Critical)</label>
    <type>Checkbox</type>
</CustomField>