dynamix/force-app/main/default/objects/Booking__c/fields/Is_5_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Is_5_Amount_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is 5% Amount Received</label>
    <type>Checkbox</type>
</CustomField>