dynamix/force-app/main/default/objects/Booking__c/fields/KYC_details_Non_Critical__c.field-meta.xml
<CustomField>
    <fullName>KYC_details_Non_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KYC details(Non - Critical)</label>
    <type>Checkbox</type>
</CustomField>