dynamix/force-app/main/default/objects/Booking__c/fields/KYC_Verified__c.field-meta.xml
<CustomField>
    <fullName>KYC_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KYC Verified</label>
    <type>Checkbox</type>
</CustomField>