dynamix/force-app/main/default/objects/Booking__c/fields/Last_Booking_stage__c.field-meta.xml
<CustomField>
    <fullName>Last_Booking_stage__c</fullName>
    <label>Last Booking stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>