dynamix/force-app/main/default/objects/Booking__c/fields/Last_SDR_reminder_letter_send_date__c.field-meta.xml
<CustomField>
    <fullName>Last_SDR_reminder_letter_send_date__c</fullName>
    <label>Last SDR Reminder Letter Send Date</label>
    <type>Date</type>
</CustomField>