dynamix/force-app/main/default/objects/Booking__c/fields/Lien_Date__c.field-meta.xml
<CustomField>
    <fullName>Lien_Date__c</fullName>
    <label>Lien Date</label>
    <type>Date</type>
</CustomField>