dynamix/force-app/main/default/objects/Booking__c/fields/Loan_Sanction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Sanction_Amount__c</fullName>
    <formula>Primary_Loan_Details__r.Sanction_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Sanction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>