dynamix/force-app/main/default/objects/Booking__c/fields/Loan_Sanction_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Sanction_Status__c</fullName>
    <formula>TEXT( Primary_Loan_Details__r.Sanction_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Sanction Status</label>
    <type>Text</type>
</CustomField>