dynamix/force-app/main/default/objects/Booking__c/fields/Milestones_Wise_Interest_WaveOff__c.field-meta.xml
<CustomField>
    <fullName>Milestones_Wise_Interest_WaveOff__c</fullName>
    <label>Milestones Wise Interest Wave Off</label>
    <summarizedField>Payment_Milestones__c.Interest_Wave_Off_Amount__c</summarizedField>
    <summaryForeignKey>Payment_Milestones__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>