dynamix/force-app/main/default/objects/Booking__c/fields/Miscellaneous_Expense__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Expense__c</fullName>
    <label>Miscellaneous Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>