dynamix/force-app/main/default/objects/Booking__c/fields/MVAT__c.field-meta.xml
<CustomField>
    <fullName>MVAT__c</fullName>
    <label>MVAT %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>