dynamix/force-app/main/default/objects/Booking__c/fields/NDC_Received__c.field-meta.xml
<CustomField>
    <fullName>NDC_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDC Received</label>
    <type>Checkbox</type>
</CustomField>