dynamix/force-app/main/default/objects/Booking__c/fields/NDC_TAT__c.field-meta.xml
<CustomField>
    <fullName>NDC_TAT__c</fullName>
    <formula>No_Due_Received_Date__c  -  No_Due_Requested_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDC TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>