dynamix/force-app/main/default/objects/Booking__c/fields/Net_Charges__c.field-meta.xml
<CustomField>
    <fullName>Net_Charges__c</fullName>
    <label>Net Charges</label>
    <summarizedField>Price_Details__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Price_Details__c.Charge_Group__c</field>
        <operation>equals</operation>
        <value>Others</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Price_Details__c.Name</field>
        <operation>notEqual</operation>
        <value>Share money</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Price_Details__c.Name</field>
        <operation>notEqual</operation>
        <value>Security maintenance deposit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Price_Details__c.Name</field>
        <operation>notEqual</operation>
        <value>Share Money</value>
    </summaryFilterItems>
    <summaryForeignKey>Price_Details__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>