dynamix/force-app/main/default/objects/Booking__c/fields/Net_Realization__c.field-meta.xml
<CustomField>
    <fullName>Net_Realization__c</fullName>
    <formula>( Agreement_Value__c  +  Net_Charges__c)  / Related_Suggested_Property__r.Unit__r.Proposed_Total_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Realization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>