dynamix/force-app/main/default/objects/Booking__c/fields/No_Due_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>No_Due_Requested_Date__c</fullName>
    <label>No Due Requested Date</label>
    <type>Date</type>
</CustomField>