dynamix/force-app/main/default/objects/Booking__c/fields/No_of_Car_Parking__c.field-meta.xml
<CustomField>
    <fullName>No_of_Car_Parking__c</fullName>
    <label>No of Car Parking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>