dynamix/force-app/main/default/objects/Booking__c/fields/NOC_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>NOC_Uploaded_Date__c</fullName>
    <label>NOC Uploaded Date</label>
    <type>Date</type>
</CustomField>