dynamix/force-app/main/default/objects/Booking__c/fields/Non_Accountable_Charges_With_Gst__c.field-meta.xml
<CustomField>
    <fullName>Non_Accountable_Charges_With_Gst__c</fullName>
    <label>Non Accountable Charges With Gst</label>
    <summarizedField>Price_Details__c.Total_Amount_incl_Tax__c</summarizedField>
    <summaryFilterItems>
        <field>Price_Details__c.Non_Accountable_Charges_Checkbox__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Price_Details__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>