dynamix/force-app/main/default/objects/Booking__c/fields/Non_Recoverable_GST_of_Invoice_Raised__c.field-meta.xml
<CustomField>
    <fullName>Non_Recoverable_GST_of_Invoice_Raised__c</fullName>
    <label>Non Recoverable GST of Invoice Raised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>