dynamix/force-app/main/default/objects/Booking__c/fields/Original_Agreement_Handed_Over__c.field-meta.xml
<CustomField>
    <fullName>Original_Agreement_Handed_Over__c</fullName>
    <label>Original Agreement Handed Over</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>