dynamix/force-app/main/default/objects/Booking__c/fields/OTP_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>OTP_Submission_Date__c</fullName>
    <label>OTP Submission Date</label>
    <type>DateTime</type>
</CustomField>