dynamix/force-app/main/default/objects/Booking__c/fields/Outstanding_Against_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Against_Unit_Cost__c</fullName>
    <formula>Total_Milestone_Due_Only_Unit_Cost__c -  Unit_Cost_Received_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Against Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>