dynamix/force-app/main/default/objects/Booking__c/fields/Own_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Own_Contribution__c</fullName>
    <formula>Agreement_Value_incl_GST__c -  Loan_Sanction_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Own Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>