dynamix/force-app/main/default/objects/Booking__c/fields/PAN__c.field-meta.xml
<CustomField>
    <fullName>PAN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAN</label>
    <type>Checkbox</type>
</CustomField>