dynamix/force-app/main/default/objects/Booking__c/fields/Payment_Milestone_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Milestone_Amount__c</fullName>
    <label>Payment Milestone Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>