dynamix/force-app/main/default/objects/Booking__c/fields/Payment_Milestones_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Milestones_Total_Amount__c</fullName>
    <formula>Agreement_Value__c * Active_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Milestones Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>