dynamix/force-app/main/default/objects/Booking__c/fields/Payment_Milestones_Total_GST__c.field-meta.xml
<CustomField>
    <fullName>Payment_Milestones_Total_GST__c</fullName>
    <formula>GST__c * Active_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Milestones Total GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>