dynamix/force-app/main/default/objects/Booking__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <formula>Related_Suggested_Property__r.Payment_Plan__r.Name</formula>
    <label>Payment Plan</label>
    <type>Text</type>
</CustomField>