dynamix/force-app/main/default/objects/Booking__c/fields/Payment_Received_Unit__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_Unit__c</fullName>
    <label>Payment Received (Unit)</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Payment_Category__c</field>
        <operation>equals</operation>
        <value>Unit Cost</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>