dynamix/force-app/main/default/objects/Booking__c/fields/PaymentMode__c.field-meta.xml
<CustomField>
    <fullName>PaymentMode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Mode (Non-Critical)</label>
    <type>Checkbox</type>
</CustomField>