dynamix/force-app/main/default/objects/Booking__c/fields/Primary_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Applicant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>