dynamix/force-app/main/default/objects/Booking__c/fields/Primary_Applicant_Name_Formulla__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant_Name_Formulla__c</fullName>
    <formula>IF( Primary_Applicant__r.FirstName &lt;&gt; null &amp;&amp;  Primary_Applicant__r.FirstName &lt;&gt; &apos;&apos;,  Primary_Applicant__r.FirstName+&apos; &apos;+ Primary_Applicant__r.LastName, Primary_Applicant__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Applicant Name Formulla</label>
    <type>Text</type>
</CustomField>