dynamix/force-app/main/default/objects/Booking__c/fields/Primary_Loan_Details__c.field-meta.xml
<CustomField>
    <fullName>Primary_Loan_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Loan Details</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bank_Loan_Details__c.Booking__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Bank_Loan_Details__c.Booking__c</field>
            <operation>equals</operation>
            <valueField>Bank_Loan_Details__c.Booking__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bank_Loan_Details__c</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>