dynamix/force-app/main/default/objects/Booking__c/fields/Primary_Secondary_info_Updated__c.field-meta.xml
<CustomField>
    <fullName>Primary_Secondary_info_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary/Secondary info Updated</label>
    <type>Checkbox</type>
</CustomField>