dynamix/force-app/main/default/objects/Booking__c/fields/Prior_Primary_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Prior_Primary_Applicant__c</fullName>
    <label>Prior Primary Applicant</label>
    <length>30</length>
    <type>Text</type>
</CustomField>