dynamix/force-app/main/default/objects/Booking__c/fields/Project_Email__c.field-meta.xml
<CustomField>
    <fullName>Project_Email__c</fullName>
    <formula>Project_Name__r.Project_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Email</label>
    <type>Text</type>
</CustomField>