dynamix/force-app/main/default/objects/Booking__c/fields/Project_Name_Formulla__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_Formulla__c</fullName>
    <formula>Project_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name Formulla</label>
    <type>Text</type>
</CustomField>