dynamix/force-app/main/default/objects/Booking__c/fields/Property_Carpet_Area_in_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Property_Carpet_Area_in_Sq_ft__c</fullName>
    <formula>Related_Suggested_Property__r.Unit__r.Property_Area_in_sqft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Carpet Area in Sq. ft.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>