dynamix/force-app/main/default/objects/Booking__c/fields/Question_10__c.field-meta.xml
<CustomField>
    <fullName>Question_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project (Non-Critical)</label>
    <type>Checkbox</type>
</CustomField>