dynamix/force-app/main/default/objects/Booking__c/fields/Question_1__c.field-meta.xml
<CustomField>
    <fullName>Question_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicant NAme (Critical)</label>
    <type>Checkbox</type>
</CustomField>