dynamix/force-app/main/default/objects/Booking__c/fields/Question_2__c.field-meta.xml
<CustomField>
    <fullName>Question_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email (Critical)</label>
    <type>Checkbox</type>
</CustomField>