dynamix/force-app/main/default/objects/Booking__c/fields/Reciept_Type_Non_Critical__c.field-meta.xml
<CustomField>
    <fullName>Reciept_Type_Non_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reciept Type (Non-Critical)</label>
    <type>Checkbox</type>
</CustomField>