dynamix/force-app/main/default/objects/Booking__c/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <formula>$Label.Booking_Form_Link+&quot;?Id=&quot;+Id+&quot;&amp;submitted=customer&quot;</formula>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>