dynamix/force-app/main/default/objects/Booking__c/fields/Rectification_Deed_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Rectification_Deed_Agreement_Date__c</fullName>
    <label>Rectification Deed - Agreement Date</label>
    <type>Date</type>
</CustomField>