dynamix/force-app/main/default/objects/Booking__c/fields/Rectification_Deed_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rectification_Deed_Notes__c</fullName>
    <label>Rectification Deed - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>