dynamix/force-app/main/default/objects/Booking__c/fields/Rectification_Deed_Reg_Challan_No__c.field-meta.xml
<CustomField>
    <fullName>Rectification_Deed_Reg_Challan_No__c</fullName>
    <label>Rectification Deed - Reg Challan No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>