dynamix/force-app/main/default/objects/Booking__c/fields/Refund_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount1__c</fullName>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>