dynamix/force-app/main/default/objects/Booking__c/fields/Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount__c</fullName>
    <formula>Payment_Received_Agreement__c - cancellation_fees__c</formula>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>