dynamix/force-app/main/default/objects/Booking__c/fields/Refund_Bank__c.field-meta.xml
<CustomField>
    <fullName>Refund_Bank__c</fullName>
    <label>Refund Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>