dynamix/force-app/main/default/objects/Booking__c/fields/Refund_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Handover_Date__c</fullName>
    <label>Refund Handover Date</label>
    <type>Date</type>
</CustomField>