dynamix/force-app/main/default/objects/Booking__c/fields/Registration_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Registration_Agent_Name__c</fullName>
    <label>Registration Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>