dynamix/force-app/main/default/objects/Booking__c/fields/Registration_Charges_Pending__c.field-meta.xml
<CustomField>
    <fullName>Registration_Charges_Pending__c</fullName>
    <formula>Registration_Charges__c - Payment_Received_Registration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Charges (Pending)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>